--- a/flutter/pubspec.yaml
+++ b/flutter/pubspec.yaml
@@ -39,6 +39,7 @@ dependencies:
   shared_preferences: ^2.0.15
   http: ^0.13.5
   intl: ^0.17.0
+  path_provider: ^2.0.11
 
 dev_dependencies:
   flutter_test:
