--- a/flutter/pubspec.yaml
+++ b/flutter/pubspec.yaml
@@ -40,6 +40,7 @@ dependencies:
   http: ^0.13.5
   intl: ^0.17.0
   path_provider: ^2.0.11
+  fl_chart: ^0.55.1
 
 dev_dependencies:
   flutter_test:
